fixed z-index to FileLoader => Cabinet

--- a/src/Pages/Cabinet/Components/FileLoader/FileLoader.module.sass
+++ b/src/Pages/Cabinet/Components/FileLoader/FileLoader.module.sass
@@ -5,7 +5,7 @@
 .loaderWrap
   height: 280px
   position: fixed
-  z-index: 3
+  z-index: 5
   box-shadow: 0 2px 4px rgba(140, 140, 140, 0.5)
   overflow: hidden
   transition: top 0.1s ease-in-out, left 0.1s ease-in-out, right 0.1s ease-in-out, bottom 0.1s ease-in-out
